# HFT_live

./: .gitignore  README.md  alpha.py  alpha_2.py  architecture.md  get_data.py  get_data_future_orderbook_kucoin.py  requirements.txt  test_cancel.py  test_order.py
rust/: Cargo.toml  README.md
rust/hft_core/: Cargo.toml
rust/hft_core/src/: lib.rs
rust/hft_engine/: Cargo.toml
rust/hft_engine/src/: main.rs
rust/hft_exchange_mock/: Cargo.toml
rust/hft_exchange_mock/src/: lib.rs
rust/hft_strategy/: Cargo.toml
rust/hft_strategy/src/: lib.rs  main.rs
