[package]
name = "hft_engine"
version = "0.1.0"
edition = "2021"

[dependencies]
hft_core = { path = "../hft_core" }
hft_exchange_mock = { path = "../hft_exchange_mock" }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
rust_decimal = "1"
log = "0.4"
env_logger = "0.9"
