[package]
name = "hft_strategy"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros","rt-multi-thread","time"] }
rust_decimal = "1"
chrono = { version = "0.4", features = ["serde"] }
serde = { version = "1.0", features = ["derive"] }
anyhow = "1"
hft_core = { path = "../hft_core" }
hft_exchange_mock = { path = "../hft_exchange_mock" }
log = "0.4"
env_logger = "0.9"
